[tool.poetry]
name = "uber"
version = "0.1.0"
description = ""
authors = ["Leo-alves2 <leo.alves.b.vieira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pandas = "^2.2.3"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
